--- a/src/app/task/task-list/task-list.component.html
+++ b/src/app/task/task-list/task-list.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col justify-center p-4">
   <div class="flex justify-center items-center gap-10 mb-6">
     <div class="flex gap-20">
+      <button (click)="handleLogout()" class="bg-blue-500 px-4 py-1 rounded-2xl text-white font-bold hover:scale-105">Log Out</button>
       <input class="border-black border-2 rounded-2xl px-2" #input type="text" (keyup)="handleSearch(input.value)" placeholder="Rechercher"/>
       <h1 class="text-3xl font-bold">Todo List</h1>
     </div>
@@ -34,4 +35,12 @@
 </div>
 <div *ngIf="filterValue" class="absolute left-10 top-0 p-4 bg-green-500 rounded-b-2xl font-bold text-white">
   Filtre Activé
+</div>
+
+<div *ngIf="logoutValue" class="flex flex-col items-center gap-10 p-6 border-black border-2 w-1/4 rounded-2xl relative left-[35%]">
+    <h1 class="font-bold">Voulez-vous vraiment vous déconnecter ?</h1>
+    <div class="flex gap-4">
+      <button (click)="logOut()" class="bg-blue-500 px-4 py-1 rounded-2xl text-white font-bold hover:scale-105">Yes</button>
+      <button (click)="handleLogout()" class="bg-red-500 px-4 py-1 rounded-2xl text-white font-bold hover:scale-105">No</button>
+    </div>
 </div>
